# jackctlmmc

./: AUTHORS  GNUmakefile  GNUmakefile.in  NEWS  README  TODO  VERSION  common.c  common.h  config.h  config.h.in  config.status  configure  configure.ac  jackctlmmc  main.c  qjackmmc
qt/: Doxyfile  Makefile  qjackmmc.desktop  qjackmmc.desktop.in
qt/src/: Makefile  main.cpp  mainWindow.cpp  mainWindow.h  moc_mainWindow.cpp  moc_sequencerThread.cpp  moc_validator.cpp  qjackmmc.ui  sequencerThread.cpp  sequencerThread.h  src.pro  src.pro.in  ui_qjackmmc.h  validator.cpp  validator.h
qt/templates/: cpp
